k8s/argocd/project/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: dev
spec:
  type: NodePort
  selector:
    app: dev-app
  ports:
    - port: 8080
      targetPort: 8080
      # nodePort: 30007
